<resources>
    <string name="app_name">Legrand</string>
    <string name="choose_your_role">Choose Your Role</string>
    <string name="please_wait">Please Wait</string>
    <string name="please_enter_your_mail">Please Enter Your Mail</string>
    <string name="login">Login</string>
    <string name="tool_shop">Tool Shop</string>
    <string name="maintenance">Maintenance</string>
    <string name="new_project">New Project</string>
    <string name="oee">OEE</string>
    <string name="legrand_way">Legrand Way</string>
    <string name="injection_data">Injection Data</string>
    <string name="trouble_shooting">Trouble Shooting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_part_number">Choose Part Number</string>
    <string name="part_number">Part Number</string>
    <string name="material_used">Material Used :</string>
    <string name="weight_of_1_pc">Weight of 1 pc :</string>
    <string name="cycle_time">Cycle Time :</string>
    <string name="std_cavities">STD Cavities :</string>
    <string name="hourly_rate">Hourly Rate :</string>
    <string name="quantity_per_quntainer">Quantity Per Quntainer :</string>
    <string name="mold_location">Mold Location :</string>
    <string name="rack_no">Rack no :</string>
    <string name="get_parameter_sheet">Get Parameter Sheet</string>
    <string name="edit_and_add">Edit and Add</string>
    <string name="machine">Machine</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="operator_code">Operator Code</string>
    <string name="cavity_number">Cavity Number</string>
    <string name="total_produced">Total Produced</string>
    <string name="work_cav">Work Cav</string>
    <string name="ct">CT</string>
    <string name="e">E</string>
    <string name="mo">MO</string>
    <string name="h">H</string>
    <string name="me">ME</string>
    <string name="q">Q</string>
    <string name="dm">DM</string>
    <string name="co">CO</string>
    <string name="su">SU</string>
    <string name="cm">CM</string>
    <string name="r">R</string>
    <string name="wl">WL</string>
    <string name="oth">OTH</string>
    <string name="post">Post</string>
    <string name="operation">operation</string>
    <string name="get_data">Get Data</string>
    <string name="edit">Edit</string>
    <string name="sink_mark">Sink Mark</string>
    <string name="excessive_flash">Excessive Flash</string>
    <string name="short_shot">Short Shot</string>
    <string name="part_stuck">Part Stuck</string>
    <string name="runner_stuck">Runner Stuck</string>
    <string name="black_spots_brown_streaks">Black spots, Brown streaks</string>
    <string name="brittleness_cracking_crazing">Brittleness / Cracking/ crazing</string>
    <string name="blisters">Blisters</string>
    <string name="burn_marks">Burn Marks</string>
    <string name="discoloration">Discoloration</string>
    <string name="flow_mark">Flow Mark</string>
    <string name="poor_surface_finish_gloss">Poor Surface Finish (Gloss)</string>
    <string name="poor_weld_lines">Poor Weld Lines</string>
    <string name="silver_streaks_splay_splash">Silver Streaks, Splay, Splash</string>
    <string name="warping">Warping</string>
    <string name="over_sized_part_out_of_specs_master_sample">Over Sized Part /out of specs > master sample</string>
    <string name="voids_bubbles">Voids, Bubbles</string>
    <string name="method">Method</string>
</resources>